5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4372/executions/1832_1658.log
== SUBMITION (2019-06-13 19:14:29) 
-- CODE:
from numpy import*
a=input("digite os paises: ").upper().split(',')
cont=zeros(5,dtypes=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[1]=="MGL"):
		cont[3]=cont[3]+1
	if(a[1]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
0.881303
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1658/main.py", line 3, in <module>
    cont=zeros(5,dtypes=int)
TypeError: 'dtypes' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:14:32) 
-- CODE:
from numpy import*
a=input("digite os paises: ").upper().split(',')
cont=zeros(5,dtypes=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[1]=="MGL"):
		cont[3]=cont[3]+1
	if(a[1]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
0.921417
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1658/main.py", line 3, in <module>
    cont=zeros(5,dtypes=int)
TypeError: 'dtypes' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:14:45) 
-- CODE:
from numpy import*
a=input("digite os paises: ").upper().split(,)
cont=zeros(5,dtypes=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[1]=="MGL"):
		cont[3]=cont[3]+1
	if(a[1]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
0.528674
-- ERROR:
  File "/home/codebench/codes/1832/1658/main.py", line 2
    a=input().upper().split(,)
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:15:18) 
-- CODE:
from numpy import*
a=input("digite os paises: ").upper().split(',')
cont=zeros(5,dtypes=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[1]=="MGL"):
		cont[3]=cont[3]+1
	if(a[1]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
0.813887
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1658/main.py", line 3, in <module>
    cont=zeros(5,dtypes=int)
TypeError: 'dtypes' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:15:53) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtypes=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[1]=="MGL"):
		cont[3]=cont[3]+1
	if(a[1]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
0.99658
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1658/main.py", line 3, in <module>
    cont=zeros(5,dtypes=int)
TypeError: 'dtypes' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:15:54) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtypes=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[1]=="MGL"):
		cont[3]=cont[3]+1
	if(a[1]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:16:56) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtypes=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[1]=="MGL"):
		cont[3]=cont[3]+1
	if(a[1]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:18:44) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[1]=="MGL"):
		cont[3]=cont[3]+1
	if(a[1]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:19:15) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[1]=="MGL"):
		cont[3]=cont[3]+1
	if(a[1]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
0.748257
-- TEST CASE 1:
---- input:
JPN,CHN,JPN,JPN,JPN,CHN,THA,MGL,CHN,CHN
---- correct output:
4
[4 4 0 1 1]
---- user output:
4
[0 4 0 0 0]
-- TEST CASE 2:
---- input:
MGL,KOR,CHN,MGL,JPN,JPN,THA,MGL,MGL,MGL,THA,JPN,MGL,CHN,CHN,THA,KOR,MGL,JPN,KOR,JPN,JPN,MGL,JPN
---- correct output:
8
[3 7 3 8 3]
---- user output:
7
[0 7 3 0 0]
-- TEST CASE 3:
---- input:
KOR,THA,KOR,THA,KOR,CHN,MGL,MGL,CHN,CHN,KOR
---- correct output:
4
[3 0 4 2 2]
---- user output:
11
[ 0  0  4  0 11]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:19:55) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[1]=="MGL"):
		cont[3]=cont[3]+1
	if(a[1]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:21:11) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
0.859752
-- TEST CASE 1:
---- input:
JPN,CHN,JPN,JPN,JPN,CHN,THA,MGL,CHN,CHN
---- correct output:
4
[4 4 0 1 1]
---- user output:
4
[0 4 0 1 1]
-- TEST CASE 2:
---- input:
MGL,KOR,CHN,MGL,JPN,JPN,THA,MGL,MGL,MGL,THA,JPN,MGL,CHN,CHN,THA,KOR,MGL,JPN,KOR,JPN,JPN,MGL,JPN
---- correct output:
8
[3 7 3 8 3]
---- user output:
8
[0 7 3 8 3]
-- TEST CASE 3:
---- input:
KOR,THA,KOR,THA,KOR,CHN,MGL,MGL,CHN,CHN,KOR
---- correct output:
4
[3 0 4 2 2]
---- user output:
4
[0 0 4 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:21:14) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
0.821695
-- TEST CASE 1:
---- input:
JPN,CHN,JPN,JPN,JPN,CHN,THA,MGL,CHN,CHN
---- correct output:
4
[4 4 0 1 1]
---- user output:
4
[0 4 0 1 1]
-- TEST CASE 2:
---- input:
MGL,KOR,CHN,MGL,JPN,JPN,THA,MGL,MGL,MGL,THA,JPN,MGL,CHN,CHN,THA,KOR,MGL,JPN,KOR,JPN,JPN,MGL,JPN
---- correct output:
8
[3 7 3 8 3]
---- user output:
8
[0 7 3 8 3]
-- TEST CASE 3:
---- input:
KOR,THA,KOR,THA,KOR,CHN,MGL,MGL,CHN,CHN,KOR
---- correct output:
4
[3 0 4 2 2]
---- user output:
4
[0 0 4 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:21:36) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:22:22) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
1.79322
-- TEST CASE 1:
---- input:
JPN,CHN,JPN,JPN,JPN,CHN,THA,MGL,CHN,CHN
---- correct output:
4
[4 4 0 1 1]
---- user output:
4
[0 4 0 1 1]
-- TEST CASE 2:
---- input:
MGL,KOR,CHN,MGL,JPN,JPN,THA,MGL,MGL,MGL,THA,JPN,MGL,CHN,CHN,THA,KOR,MGL,JPN,KOR,JPN,JPN,MGL,JPN
---- correct output:
8
[3 7 3 8 3]
---- user output:
8
[0 7 3 8 3]
-- TEST CASE 3:
---- input:
KOR,THA,KOR,THA,KOR,CHN,MGL,MGL,CHN,CHN,KOR
---- correct output:
4
[3 0 4 2 2]
---- user output:
4
[0 0 4 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:22:23) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
1.93391
-- TEST CASE 1:
---- input:
JPN,CHN,JPN,JPN,JPN,CHN,THA,MGL,CHN,CHN
---- correct output:
4
[4 4 0 1 1]
---- user output:
4
[0 4 0 1 1]
-- TEST CASE 2:
---- input:
MGL,KOR,CHN,MGL,JPN,JPN,THA,MGL,MGL,MGL,THA,JPN,MGL,CHN,CHN,THA,KOR,MGL,JPN,KOR,JPN,JPN,MGL,JPN
---- correct output:
8
[3 7 3 8 3]
---- user output:
8
[0 7 3 8 3]
-- TEST CASE 3:
---- input:
KOR,THA,KOR,THA,KOR,CHN,MGL,MGL,CHN,CHN,KOR
---- correct output:
4
[3 0 4 2 2]
---- user output:
4
[0 0 4 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:22:33) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+0
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:23:28) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:23:33) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
0.706557
-- TEST CASE 1:
---- input:
JPN,CHN,JPN,JPN,JPN,CHN,THA,MGL,CHN,CHN
---- correct output:
4
[4 4 0 1 1]
---- user output:
4
[0 4 0 1 1]
-- TEST CASE 2:
---- input:
MGL,KOR,CHN,MGL,JPN,JPN,THA,MGL,MGL,MGL,THA,JPN,MGL,CHN,CHN,THA,KOR,MGL,JPN,KOR,JPN,JPN,MGL,JPN
---- correct output:
8
[3 7 3 8 3]
---- user output:
8
[0 7 3 8 3]
-- TEST CASE 3:
---- input:
KOR,THA,KOR,THA,KOR,CHN,MGL,MGL,CHN,CHN,KOR
---- correct output:
4
[3 0 4 2 2]
---- user output:
4
[0 0 4 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:24:42) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
0.910798
-- TEST CASE 1:
---- input:
JPN,CHN,JPN,JPN,JPN,CHN,THA,MGL,CHN,CHN
---- correct output:
4
[4 4 0 1 1]
---- user output:
4
[0 4 0 1 1]
-- TEST CASE 2:
---- input:
MGL,KOR,CHN,MGL,JPN,JPN,THA,MGL,MGL,MGL,THA,JPN,MGL,CHN,CHN,THA,KOR,MGL,JPN,KOR,JPN,JPN,MGL,JPN
---- correct output:
8
[3 7 3 8 3]
---- user output:
8
[0 7 3 8 3]
-- TEST CASE 3:
---- input:
KOR,THA,KOR,THA,KOR,CHN,MGL,MGL,CHN,CHN,KOR
---- correct output:
4
[3 0 4 2 2]
---- user output:
digite os paises: 4
[0 0 4 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:24:43) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:34:06) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[1]=1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:34:54) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=CONT[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:34:59) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=CONT[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:34:59) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=CONT[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
0.809112
-- TEST CASE 1:
---- input:
JPN,CHN,JPN,JPN,JPN,CHN,THA,MGL,CHN,CHN
---- correct output:
4
[4 4 0 1 1]
---- user output:
4
[0 4 0 1 1]
-- TEST CASE 2:
---- input:
MGL,KOR,CHN,MGL,JPN,JPN,THA,MGL,MGL,MGL,THA,JPN,MGL,CHN,CHN,THA,KOR,MGL,JPN,KOR,JPN,JPN,MGL,JPN
---- correct output:
8
[3 7 3 8 3]
---- user output:
8
[0 7 3 8 3]
-- TEST CASE 3:
---- input:
KOR,THA,KOR,THA,KOR,CHN,MGL,MGL,CHN,CHN,KOR
---- correct output:
4
[3 0 4 2 2]
---- user output:
digite os paises: 4
[0 0 4 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:35:35) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:39:49) 
-- CODE:
from numpy import*
a=input("digite os paises: ").split(',').upper
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:41:10) 
-- CODE:
from numpy import*
a=input("digite os paises: ").upper().split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:41:36) 
-- CODE:
from numpy import*
a=input("digite os paises: ").upper().split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
0.903242
-- TEST CASE 1:
---- input:
JPN,CHN,JPN,JPN,JPN,CHN,THA,MGL,CHN,CHN
---- correct output:
4
[4 4 0 1 1]
---- user output:
4
[0 4 0 1 1]
-- TEST CASE 2:
---- input:
MGL,KOR,CHN,MGL,JPN,JPN,THA,MGL,MGL,MGL,THA,JPN,MGL,CHN,CHN,THA,KOR,MGL,JPN,KOR,JPN,JPN,MGL,JPN
---- correct output:
8
[3 7 3 8 3]
---- user output:
8
[0 7 3 8 3]
-- TEST CASE 3:
---- input:
KOR,THA,KOR,THA,KOR,CHN,MGL,MGL,CHN,CHN,KOR
---- correct output:
4
[3 0 4 2 2]
---- user output:
4
[0 0 4 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:41:45) 
-- CODE:
from numpy import*
a=input("digite os paises: ").upper().split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:42:25) 
-- CODE:
from numpy import*
a=input("digite os paises: ").upper().split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:44:56) 
-- CODE:
from numpy import*
a=input("digite os paises: ").upper().split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CNH"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:46:52) 
-- CODE:
from numpy import*
a=input("digite os paises: ").upper().split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CHN"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:47:24) 
-- CODE:
from numpy import*
a=input("digite os paises: ").upper().split(',')
cont=zeros(5,dtype=int)
for i in range(size(a)):
	if(a[i]=="CHN"):
		cont[0]=cont[0]+1
	if(a[i]=="JPN"):
		cont[1]=cont[1]+1
	if(a[i]=="KOR"):
		cont[2]=cont[2]+1
	if(a[i]=="MGL"):
		cont[3]=cont[3]+1
	if(a[i]=="THA"):
		cont[4]=cont[4]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
1.05291
-- TEST CASE 1:
---- input:
JPN,CHN,JPN,JPN,JPN,CHN,THA,MGL,CHN,CHN
---- correct output:
4
[4 4 0 1 1]
---- user output:
4
[4 4 0 1 1]
-- TEST CASE 2:
---- input:
MGL,KOR,CHN,MGL,JPN,JPN,THA,MGL,MGL,MGL,THA,JPN,MGL,CHN,CHN,THA,KOR,MGL,JPN,KOR,JPN,JPN,MGL,JPN
---- correct output:
8
[3 7 3 8 3]
---- user output:
8
[3 7 3 8 3]
-- TEST CASE 3:
---- input:
KOR,THA,KOR,THA,KOR,CHN,MGL,MGL,CHN,CHN,KOR
---- correct output:
4
[3 0 4 2 2]
---- user output:
4
[3 0 4 2 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
